--- a/services/main/src/components/App/App.module.scss
+++ b/services/main/src/components/App/App.module.scss
@@ -1,12 +1,4 @@
-.button {
-    background: red;
-    padding: 20px;
-}
-
-.value {
-    font-size: 100px;
-}
-
-.icon {
-    color: green;
+body {
+  padding: 0;
+  margin: 0;
 }
