--- a/services/main/src/modules/dictionaryModule/styles/DictionaryPage.module.scss
+++ b/services/main/src/modules/dictionaryModule/styles/DictionaryPage.module.scss
@@ -11,8 +11,17 @@
   }
 }
 
+.dictionary__form {
+  @media (max-width: 660px) {
+    align-items: start;
+    flex-direction: column;
+  }
+}
+
 .add-word-form {
+  flex-grow: 1;
   display: flex;
+  justify-content: end;
   column-gap: 10px;
 
   &__one-word {
@@ -30,6 +39,18 @@
   &__field {
     width: 100px !important;
     height: 40px;
+  }
+
+  @media (max-width: 660px) {
+    flex-direction: column;
+    row-gap: 7px;
+    &__field {
+      width: 100% !important;
+    }
+    &__one-word {
+      padding-left: 0;
+      padding-right: 0;
+    }
   }
 }
 
@@ -54,10 +75,17 @@
   }
 }
 
+.dictionary__control {
+  display: flex;
+  column-gap: 10px;
+  background-color: #f5f6fa;
+  z-index: 1000;
+}
+
 .words {
   height: 100%;
   width: 100%;
-  border: 1px solid red;
+  // border: 1px solid red;
   display: flex;
   flex-direction: column;
   .word {
@@ -102,4 +130,22 @@
   width: 100%;
   display: flex;
   cursor: pointer;
+}
+
+
+.description-modal{
+  border-radius: 5px;
+  overflow: auto;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  max-width: 400px;
+  width: 100%;
+  height: 400px;
+  border: none;
+}
+
+.video::-webkit-media-controls {
+  display: none;
 }
